--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -29,16 +29,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation "com.android.support:appcompat-v7:$android_support_version"
-    implementation "com.android.support:support-v13:$android_support_version"
-    implementation "com.android.support:design:$android_support_version"
-    implementation "com.android.support:recyclerview-v7:$android_support_version"
-    implementation "com.android.support:cardview-v7:$android_support_version"
+    implementation "androidx.appcompat:appcompat:$android_support_version"
+    implementation "androidx.legacy:legacy-support-v13:$android_support_version"
+    implementation "com.google.android.material:material:$android_support_version"
+    implementation "androidx.recyclerview:recyclerview:$android_support_version"
+    implementation "androidx.cardview:cardview:$android_support_version"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
 
     testImplementation 'junit:junit:4.12'
 
@@ -50,11 +50,11 @@ dependencies {
 
 
     //android arch. component
-    implementation "android.arch.lifecycle:runtime:$archVersion"
-    implementation "android.arch.lifecycle:extensions:$archVersion"
-    annotationProcessor "android.arch.lifecycle:compiler:$archVersion"
-    implementation "android.arch.persistence.room:runtime:$archVersion"
-    annotationProcessor "android.arch.persistence.room:compiler:$archVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime:$archVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$archVersion"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archVersion"
+    implementation "androidx.room:room-runtime:$archVersion"
+    annotationProcessor "androidx.room:room-compiler:$archVersion"
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -71,12 +71,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
 
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.19.0'
-    testImplementation("android.arch.core:core-testing:$archVersion", {
+    testImplementation("androidx.arch.core:core-testing:$archVersion", {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-core-utils'
