--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext {
-        android_support_version ="25.3.1"
-        archVersion = "1.0.0-alpha3"
+        android_support_version = '1.0.0-beta01'
+        archVersion = '2.0.0-beta01'
     }
     repositories {
         jcenter()
@@ -21,6 +21,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        google()
     }
 }
 
